package = 'clawpack.riemann'
pkg_dir = join_paths(package.split('.'))

python_sources = [
  '__init__.py',
  'mhd_1D_constants.py',
  'acoustics_1D_constants.py',
  'nonlinear_elasticity_1D_py.py',
  'acoustics_1D_py.py',
  'nonlinear_elasticity_fwave_1D_constants.py',
  'acoustics_2D_constants.py',
  'psystem_2D_constants.py',
  'acoustics_mapped_2D_constants.py',
  'reactive_euler_with_efix_1D_constants.py',
  'acoustics_ptwise_2D_constants.py',
  'riemann_interactive.py',
  'acoustics_variable_1D_constants.py',
  'riemann_tools.py',
  'advection_1D_constants.py',
  'advection_1D_py.py',
  'shallow_1D_py.py',
  'advection_2D_constants.py',
  'shallow_roe_tracer_1D_constants.py',
  'advection_color_1D_constants.py',
  'shallow_roe_with_efix_1D_constants.py',
  'burgers_1D_constants.py',
  'shallow_roe_with_efix_2D_constants.py',
  'burgers_1D_py.py',
  'shallow_sphere_2D_constants.py',
  'burgers_2D_constants.py',
  'static.py',
  'burgers_3D_constants.py',
  'traffic_1D_constants.py',
  'cubic_1D_constants.py',
  'traffic_vc_1D_constants.py',
  'euler_1D_py.py',
  'traffic_vc_tracer_1D_constants.py',
  'euler_3D_constants.py',
  'vc_acoustics_2D_constants.py',
  'euler_4wave_2D_constants.py',
  'vc_acoustics_3D_constants.py',
  'euler_5wave_2D_constants.py',
  'vc_advection_1D_py.py',
  'euler_mapgrid_2D_constants.py',
  'vc_advection_2D_constants.py',
  'euler_with_efix_1D_constants.py',
  'vc_advection_3D_constants.py',
  'kpp_2D_constants.py',
  'vc_elasticity_2D_constants.py',
  'layered_shallow_water_1D_constants.py',
  'write_constants.py',
]

py.install_sources(
  python_sources,
  subdir: pkg_dir,
)
